--- a/index-style.css
+++ b/index-style.css
@@ -9,6 +9,8 @@ h1 {
     font-size: 5rem;
     line-height: 6rem;
     font-weight: 900;
+    letter-spacing: 0.5rem;
+    color: darkblue;
 }
 
 .h2,
@@ -16,6 +18,7 @@ h2 {
     font-size: 2rem;
     line-height: 3rem;
     font-weight: 500;
+    color: darkblue;
 
 }
 
@@ -84,14 +87,13 @@ h2 {
     -webkit-text-stroke-color: gold;
     text-shadow: 3px 3px transparent; */
 /* text-shadow: 3px 3px pink; */
-}
+
 
 .wrap-title {
     height: 80vh;
     display: flex;
     flex-direction: column-reverse;
     margin-right: 10px;
-
     /* flex-wrap: wrap; */
 
 }
@@ -234,33 +236,6 @@ h2 {
 
 /* ---Main Content--- */
 
-.image-wrap {
-    display: flex;
-    height: 400vh;
-    width: 100vw;
-    position: absolute;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    transition: 0.5s;
-    top: 0;
-}
-
-.box {
-    width: 75%;
-    /* align with banner-right */
-    height: 100vh;
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.box span {
-    width: 100%;
-    border: 1px red solid;
-}
-
 .to-med {
     position: relative;
     width: 1px;
@@ -324,6 +299,13 @@ h2 {
 }
 
 
+
+
+
+
+
+/* ---Resume---- */
+/* ---Resume---- */
 /* ---Resume---- */
 .resume {
     width: 70%;
@@ -332,14 +314,19 @@ h2 {
 }
 
 .divider {
-    border-bottom: 1px solid palegoldenrod;
+    border-bottom: 1px solid #eee8aa;
     width: 80%;
 
+}
+
+.resume h1 {
+    color: #eee8aa;
 }
 
 .divider h2 {
     margin-top: 1.5rem;
     margin-bottom: 2px;
+    color: #eee8aa;
 }
 
 
@@ -347,6 +334,7 @@ h2 {
     margin-top: 10px;
     display: flex;
     flex-wrap: wrap;
+    line-height: 1.2rem;
 
 }
 
@@ -408,11 +396,39 @@ h2 {
 
 /* ---Box 1---- */
 
-.box1 {
 
-    background: palegoldenrod;
-    color: white;
-    background-size: contain;
+.image-wrap {
+    display: flex;
+    height: 400vh;
+    width: 100vw;
+    position: absolute;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    transition: 0.5s;
+    top: 0;
+}
+
+.box {
+    width: 75%;
+    height: 100vh;
+    /* align with banner-right */
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background: blanchedalmond;
+    /* 要讓文字貼在下面 */
+}
+
+.box span {
+    width: 100%;
+    border: 1px red solid;
+}
+
+
+.box1 {
+    background-color: blanchedalmond;
 }
 
 /* test */
@@ -424,42 +440,6 @@ h2 {
 }
 
 /* --------------BOX 2---------------- */
-.box2 {
-    background-color: wheat;
-
-    background-size: contain;
-}
-
-.box2 img {
-    width: 50px;
-}
-
-
-
-
-/* --------------BOX 3---------------- */
-
-.box3 {
-    background-color: wheat;
-
-    background-size: contain;
-}
-
-.box4 {
-    background-color: wheat;
-
-    background-size: contain;
-}
-
-.box5 {
-    background-color: wheat;
-
-    background-size: contain;
-}
-
-
-
-
 
 
 /* -------Menu--------- */
@@ -468,7 +448,7 @@ h2 {
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     top: 0;
     left: 0;
     background-color: rgb(0, 0, 0);
@@ -506,6 +486,31 @@ h2 {
     font-size: 60px;
 }
 
+.nav-icon {
+    position: absolute;
+    display: flex;
+    bottom: 20%;
+    left: 20%;
+    align-items: flex-end;
+    color: #eee8aa;
+
+
+}
+
+.nav-icon h2 {
+    color: #eee8aa;
+    cursor: pointer;
+
+}
+
+.nav-icon span {
+    margin-bottom: 15px;
+    margin-left: 5px;
+    cursor: pointer;
+
+}
+
+
 @media screen and (max-height: 450px) {
     .overlay a {
         font-size: 20px
@@ -516,4 +521,103 @@ h2 {
         top: 15px;
         right: 35px;
     }
+}
+
+
+/* ---Mobile  */
+/* ---Mobile  */
+/* ---Mobile  */
+@media screen and (max-width: 768px) {
+    h1 {
+        font-size: 2rem;
+        line-height: 2rem;
+    }
+
+    h2 {
+        font-size: 1rem;
+        line-height: 1rem;
+    }
+
+    .container {
+        display: inline-block;
+        width: 100%;
+    }
+
+    .banner-left {
+        width: 100%;
+        height: 150px;
+        background: dimgray;
+        /* background: url('./image/Rachel.jpg') center no-repeat, black; */
+        position: fixed;
+        z-index: 2;
+    }
+
+    .banner-left h1 {
+
+        color: black;
+
+    }
+
+    .slider-dots {
+        display: none;
+    }
+
+    .star1 {
+        left: 0px;
+        top: -50px;
+    }
+
+
+    .wrap-title {
+        width: 100%;
+        height: 100%;
+        flex-direction: row-reverse;
+        flex-wrap: wrap;
+        align-content: center;
+    }
+
+    .wrap-title h1 {
+        margin-left: 10px;
+    }
+
+    .wrap-title h1:nth-child(3) {
+        display: none;
+    }
+
+    .wrap-title h1:nth-child(1) {
+        margin-right: 10px;
+    }
+
+    .banner-right {
+        width: 100%;
+        /* height: 70%; */
+        margin-top: 150px;
+
+    }
+
+    .resume {
+        width: 80%;
+        margin-top: 30px;
+    }
+
+    .points {
+        transform: scale(1);
+    }
+
+    .skill-wrap {
+        flex-wrap: wrap;
+    }
+
+    .box {
+        width: 100%;
+        display: none;
+    }
+
+    .star2 {
+        height: 100px;
+    }
+
+
+
+
 }
