--- a/med-style.css
+++ b/med-style.css
@@ -8,9 +8,9 @@
 
 .hero {
     background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(7, 71, 191, 1) 50%, rgba(213, 212, 158, 1) 100%);
-
     width: 100vw;
 }
+
 
 .animation {
     position: relative;
@@ -18,6 +18,33 @@
     height: 80vh;
 
 }
+
+.breath-1::before {
+    content: '';
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    opacity: 1;
+    width: 0px;
+    height: 0px;
+    border-radius: 50%;
+    box-shadow: 0 0 2px 2px rgb(247, 247, 170);
+    z-index: 1;
+}
+
+.breath-1::after {
+    content: '';
+    position: absolute;
+    top: -10%;
+    left: 2%;
+    opacity: 1;
+    width: 0px;
+    height: 0px;
+    border-radius: 50%;
+    box-shadow: 0 0 2px 2px rgb(247, 247, 170);
+    z-index: 1;
+}
+
 
 .sky {
     width: 100vw;
@@ -33,7 +60,7 @@
     border-radius: 50%;
     background-color: white;
     opacity: .8;
-    animation: rise 3s ease forwards, glow 5s linear forwards infinite;
+    animation: rise 3s ease forwards, glow 3s linear forwards infinite;
     box-shadow: 0 0 40px 6px #f1ec0d;
 }
 
@@ -156,7 +183,7 @@
     animation-duration: 25s;
     animation-delay: 5sec;
     right: 20%;
-    background-image: linear-gradient(to right, #081b68, #0e3285, #104aa3, #0c63c1, #007ddf);
+    background-image: linear-gradient(to right top, #0427b3, #005ed4, #0081cb, #009dae, #00b493);
     opacity: .6;
 }
 
@@ -228,6 +255,7 @@
     background-color: transparent;
     border-left: 100vw solid transparent;
     top: -5vw;
+    /* 對應自己的高度 */
     left: 0;
 }
 
@@ -255,19 +283,20 @@
 
 .sec2-image {
     top: -3vw;
-    animation: floating ease-in-out infinite;
-    animation-duration: 10s;
-    animation-direction: alternate;
+
     background-color: transparent;
     /* align with triangle */
 }
 
 .sec2-image img {
+    animation: floating ease-in-out infinite;
+    animation-duration: 5s;
+    animation-direction: alternate;
     width: 50%;
     opacity: .3;
 }
 
-@keyframes floating {
+/* @keyframes floating {
     0% {
         transform: translate(0, 0);
     }
@@ -285,8 +314,23 @@
     100% {
         transform: translate(0px, 0px);
     }
-}
+} */
 
+@keyframes floating {
+    0% {
+        opacity: .2;
+    }
+
+
+    50% {
+        opacity: .8;
+    }
+
+
+    100% {
+        opacity: .2;
+    }
+}
 
 
 
@@ -294,20 +338,40 @@ li {
     list-style: none;
 }
 
+.anxiety li {
+    animation: floating2 ease-in-out infinite;
+    animation-duration: 5s;
+    animation-direction: alternate;
+}
+
+@keyframes floating2 {
+    0% {
+        opacity: 1;
+    }
+
+
+    50% {
+        opacity: .2;
+    }
+
+
+    100% {
+        opacity: 1;
+    }
+}
+
 
 .main {
     /* background: linear-gradient(180deg, rgba(39, 38, 41, 1) 0%, rgba(7, 71, 191, 1) 50%, rgba(213, 212, 158, 1) 100%); */
 
     background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(7, 71, 191, 1) 50%, rgba(213, 212, 158, 1) 100%);
-
-
     width: 100vw;
     height: 100vh;
 }
 
 .img-container {
     width: 100vw;
-    height: 60vh;
+    min-height: 500px;
     overflow: hidden;
 }
 
@@ -323,13 +387,16 @@ li {
 
 .card-img {
     width: 100%;
-    height: 40vh;
+    height: 350px;
     overflow: hidden;
 }
 
 .card-img img {
     object-fit: cover;
+    height: 100%;
 }
+
+
 
 .card-body {
     background-color: black;
@@ -357,7 +424,7 @@ li {
 }
 
 .box {
-    height: 30vh;
+    height: 300px;
     opacity: .5;
     overflow: hidden;
     transition: .5s ease-in;
@@ -492,6 +559,37 @@ li {
 
 }
 
+.last-sec::before {
+    content: '';
+    background: #000;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation: glow-2 ease-in-out infinite;
+    animation-duration: 5s;
+    animation-direction: alternate;
+}
+
+
+
+@keyframes glow-2 {
+    0% {
+        opacity: 0;
+    }
+
+
+    50% {
+        opacity: .5;
+    }
+
+
+    100% {
+        opacity: 0;
+    }
+}
+
 .footer-pic {
     background: url(./image/med-left-light.jpg) no-repeat center/cover;
     height: 80vh;
@@ -519,4 +617,113 @@ li {
 
 .footer-copyright p {
     color: grey;
+}
+
+
+/* ------Mobile------ */
+
+@media screen and (max-width: 992px) {
+    .hero {
+        height: 1500px;
+    }
+
+    .animation {
+        height: 1000px;
+    }
+
+    .content {
+        height: 500px;
+    }
+
+    .tri-above {
+
+        border-bottom: 80px solid rgba(26, 35, 113);
+        background-color: transparent;
+        border-left: 100vw solid transparent;
+        top: -80px;
+        /* 對應自己的高度 */
+        left: 0;
+    }
+
+    .main {
+        height: 700px;
+    }
+
+    .last-text {
+        margin-top: 30px;
+        z-index: 1;
+        left: 5%;
+        width: 90%;
+    }
+
+}
+
+@media screen and (max-width: 414px) {
+    .hero {
+        height: 1000px;
+    }
+
+    .display-1 {
+        font-size: 3rem !important;
+
+    }
+
+    h1,
+    .display-3,
+    .display-2 {
+        font-size: 2rem !important;
+
+    }
+
+
+
+    .sun {
+        width: 200px;
+        height: 200px;
+        right: 0;
+        left: 50%;
+        /* translate: (-50%, 0); */
+    }
+
+    .animation {
+        height: 600px;
+
+    }
+
+
+    .anxiety {
+        flex-wrap: wrap;
+    }
+
+    .anxiety li {
+        top: 0 !important;
+    }
+
+
+    .main {
+        margin-top: 100px;
+    }
+
+    .place-title-1 {
+        top: 0% !important;
+        right: 0%;
+    }
+
+    .place-title-2 {
+        top: 40px !important;
+        right: 0%;
+        text-align: right;
+    }
+
+    .card-wrap {
+        left: 20px;
+    }
+
+    .card {
+        width: 250px !important;
+    }
+
+
+
+
 }
