--- a/med-style.css
+++ b/med-style.css
@@ -1,10 +1,32 @@
 * {
     /* border: 1px red solid; */
-    color: white;
+    color: #F9F8E8;
     font-size: 16px;
-    letter-spacing: 0.5rem;
+    /* letter-spacing: 0.5rem; */
 }
 
+button{
+    border:0!important;
+    transition: .5s;
+}
+
+button:hover,
+button:focus {
+    outline:0!important;
+    box-shadow: rgba(255, 255, 255, 0.5) 5px 5px 15px;
+
+}
+
+.close:hover{
+    outline:0!important;
+    box-shadow: none;
+
+}
+
+body {
+    cursor: url(./image/med-cursor.png), auto;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(7, 71, 191, 1) 50%, rgba(213, 212, 158, 1) 100%);
+}
 
 .hero {
     background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(7, 71, 191, 1) 50%, rgba(213, 212, 158, 1) 100%);
@@ -15,7 +37,7 @@
 .animation {
     position: relative;
     overflow: hidden;
-    height: 80vh;
+    height: 90vh;
 
 }
 
@@ -92,23 +114,148 @@
     }
 }
 
+/* --------------- Modal --------*/
+
+.modal-dialog{
+ max-width: 800px!important;
+}
+
+.modal-body{
+    min-height: 700px!important;
+   }
+
+.modal-content{
+    background-color: rgba(5,27,51,.9)!important;
+    border-radius: 24px!important;
+
+    
+    
+}
+
+.close-customize{
+    opacity: 1!important;
+    top: 12px;
+    right:12px;
+    position: absolute;
+    margin:0!important;
+    padding:0!important;
+
+}
+
+
+
+.modal-header{
+    border-bottom: none!important;
+    
+}
+
+.modal-title{
+    margin: 0 auto;
+}
+
+.modal-img{
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    background: url("./image/med-place-sea2.jpg");
+    background-size: 120%;
+    background-position: 10% 10%;
+    margin: 0 auto;
+    position:relative;
+    animation: bg 3s infinite;
+
+}
+
+.modal-img::before{
+    content:'';
+    position:absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height:100%;
+    border-radius: 50%;
+    background: url("./image/pexels-photo-2387793.jpeg");
+    background-size: cover;
+    background-position: 10% center;
+    /* opacity: .5; */
+    filter: opacity(0.5);
+    animation: bg2 3s infinite;
+}
+
+@keyframes bg{
+    0%{
+        background-position: 12% center;
+    }
+    50%{
+        background-position: 15% center;
+    }
+    100%{
+        background-position: 12% center;
+
+    }
+}
+
+@keyframes bg2{
+    0%{
+        background-position: 15% center;
+        opacity: .5;
+    }
+    50%{
+        background-position: 12% center;
+        opacity: .4;
+    }
+    100%{
+        background-position: 15% center;
+        opacity: .5;
+
+    }
+}
+
+
+.select-min{
+    width: 140px;
+    height: 50px;
+    border-radius: 50px;
+    background: #183E62;
+    color: #FFFDDB;
+}
+
+
+.start-med{
+    width: 300px;
+    height: 70px;
+    border-radius: 70px;
+    background:#3A97A0;
+    color: #FFFDDB;
+
+}
+
+
+
+
+/* ----sea animation--- */
+
 
 .sea {
     width: 100vw;
     /*   background: radial-gradient(at 0% 0%, red, darkred, #400, #100); */
-    height: 30%;
+    height: 50%;
     border-radius: 5px;
     position: relative;
+    transform: translate3d(0, 0, 0);
+    
+    /* border: 1px solid red; */
+
 }
 
-/* ----以下會損耗記憶體--- */
 
 .sea .wave {
     position: absolute;
-    top: 40%;
-    width: 150vw;
-    height: 200vw;
-    border-radius: 45%;
+    top: 70%;
+    width: 3000px;
+    height: 3000px;
+    
+    transform-origin: center center;
 }
 
 .flow-1 {
@@ -116,74 +263,30 @@
 
 }
 
-.flow-2 {
-    animation: wave-2 linear infinite;
-
-}
 
 .sea .wave:nth-of-type(1) {
-    animation-duration: 20s;
-    left: -20%;
-    background-image: linear-gradient(to right top, #0427b3, #005ed4, #0081cb, #009dae, #00b493);
+    animation-duration: 30s;
+    left: -40%;
+    background-image: linear-gradient(to right top, #04695c, #005ed4, #0081cb, #009dae, #00b493);
+    border-radius: 35%;
     opacity: .6;
 
 }
 
 .sea .wave:nth-of-type(2) {
     animation-duration: 25s;
-    left: 10%;
-    background-image: linear-gradient(to left, #081b68, #564a8b, #8e7fb0, #c5b9d7, #fbf7ff);
+    left: 0%;
+    background-image: linear-gradient(to right top, #009dae, #00b493,#0427b3, #005ed4, #0081cb);
+    border-radius: 40%;
     opacity: .5;
 }
 
 .sea .wave:nth-of-type(3) {
-    animation-duration: 20s;
-    left: 40%;
-    background-image: linear-gradient(to right top, #05135c, #002a72, #004187, #00589a, #006fab);
-    opacity: .6;
-}
-
-.sea .wave:nth-of-type(4) {
     animation-duration: 25s;
     right: -10%;
-    background-image: linear-gradient(to right top, #05135c, #002a72, #004187, #00589a, #006fab);
-    opacity: .6;
-
-}
-
-.sea .wave:nth-of-type(5) {
-    animation-duration: 20s;
-    right: -10%;
-    background-image: linear-gradient(to right, #081b68, #564a8b, #8e7fb0, #c5b9d7, #fbf7ff);
-    opacity: .6;
-}
-
-.sea .wave:nth-of-type(6) {
-    animation-duration: 20s;
-    right: -30%;
-    background-image: linear-gradient(to right top, #0427b3, #005ed4, #0081cb, #009dae, #00b493);
-    opacity: .6;
-}
-
-.sea .wave:nth-of-type(7) {
-    animation-duration: 25s;
-    right: -20%;
-    background-image: linear-gradient(to right, #081b68, #0e3285, #104aa3, #0c63c1, #007ddf);
-    opacity: .6;
-}
-
-.sea .wave:nth-of-type(8) {
-    animation-duration: 35s;
-    right: 10%;
-    background-image: linear-gradient(to right, #081b68, #8a7ab0);
-    opacity: .6;
-}
-
-.sea .wave:nth-of-type(9) {
-    animation-duration: 25s;
-    animation-delay: 5sec;
-    right: 20%;
-    background-image: linear-gradient(to right top, #0427b3, #005ed4, #0081cb, #009dae, #00b493);
+    
+    background-image: linear-gradient(to left, #081b68, #564a8b, #866ebe, #0081cb, #cf50ba);
+    border-radius: 33%;
     opacity: .6;
 }
 
@@ -201,22 +304,6 @@
         transform: rotate(360deg);
     }
 }
-
-/*
-@keyframes wave-2 {
-    0% {
-        transform: rotate(90deg);
-    }
-
-    50% {
-        transform: rotate(270deg);
-    }
-
-    100% {
-        transform: rotate(440deg);
-    }
-} */
-
 
 
 /*---Content---*/
@@ -379,6 +466,7 @@ li {
     box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.5);
     transition: 1s;
     opacity: .5;
+    left:200px;
 }
 
 .card-wrap {
@@ -656,9 +744,15 @@ li {
         width: 90%;
     }
 
-}
+    .sea .wave {
+      
+        top: 50%;
+      
+    }
 
-@media screen and (max-width: 414px) {
+
+
+@media screen and (max-width: 768px) {
     .hero {
         height: 1000px;
     }
@@ -690,6 +784,32 @@ li {
 
     }
 
+    .sea .wave {
+      
+        top: 40%;
+      
+    }
+
+
+    .sea .wave:nth-of-type(1) {
+        left: -100%;
+    
+    }
+    
+    .sea .wave:nth-of-type(2) {
+        left: -200%;
+
+    }
+    
+    .sea .wave:nth-of-type(3) {
+        right: -100%;
+        
+    }
+
+    .select-min svg{
+        display: none;
+    }
+
 
     .anxiety {
         flex-wrap: wrap;
@@ -716,11 +836,28 @@ li {
     }
 
     .card-wrap {
-        left: 20px;
+        left: -120px!important;
+        
     }
 
     .card {
         width: 250px !important;
+        margin-right: 10px!important;
+    }
+
+    .sec2-image{
+        top: 30%;
+        opacity: .5;
+    }
+
+    .sec2-image img{
+        width: 80%;
+    }
+
+    .title{
+        font-size: 1rem;
+        margin-top: 0px!important!important;
+        text-align: center;
     }
 
 
